<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        tools:ignore="ExtraText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/desc_login"
            app:srcCompat="@drawable/spotify"
            tools:ignore="PrivateResource" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:autofillHints="@string/editEmail"
            android:background="@drawable/login_edit_background"
            android:ems="10"
            android:hint="@string/editEmail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#99FFFFFF"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:autofillHints="@string/editEmail"
            android:background="@drawable/login_edit_background"
            android:ems="10"
            android:hint="@string/editNama"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#99FFFFFF"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:autofillHints="@string/editPassword"
            android:background="@drawable/login_edit_background"
            android:hint="@string/editPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#99FFFFFF"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            android:text="@string/btnSignup"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btnLogin"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>